- Fixed : #1905281 Redirect function not using the user selected theme (malanciault)
- Added : Addition of the global navigationlink in impresstheme theme (mcdonald/skenow/malanciault)
- Added : Addition of the danish flag (anderssk)
- Added : Addition of the persian flag (malanciault)
- Added : definitions for ul and li in impresstheme (McDonald/snow/malanciault)

=========================================
2008-02-24 : ImpressCMS 1.0 "Janus" RC 2
=========================================

- Added : New smarty variable now available, <{$icmsLang}> representing the selected language. For example, if French is the current language selected by the user, then the value of this variable will be "french". (malanciault/davidl2)
- Fixed : Revision 955: Display issues with impresstheme. (Snow)
- Fixed : #1891588: Timezone offset empty (compatibility issue with versions of PHP aswell as operating system when using floats. (changed to an integer value instead). (vaughan</jegelstaff)
- Fixed : #1892430: Typo in language/english/user.php (malanciault/jegelstaff)


======================================
2008-02-10 : ImpressCMS 1.0 "Janus" RC
======================================

- Fixed : #1890400 Can't register new user. (seems to be a mysql version compatibility issue) (vaughan)

==========================================
2008-02-01 : ImpressCMS 1.0 "Janus" Beta 2
==========================================

- Fixed : w3c validation in impresstheme and impresstheme_light (sato-san)
- Fixed : #1870346 System blocks not visible to added group (skenow/dave_l)
- Fixed : #1867922 No nice path from getNicePathFromId (MacDonald/malanciault)
- Fixed : #1876797 the $tpl XoopsTpl object used in htdocs/cp_functions.php and htdocs/admin.php had a too generic name which was creating conflict (with AltSys for example). The variable name was renamed for $icsmAdminTpl (malanciault)
- Fixed : #1875382 error in xoops.css (display: inline-block) (MacDonald/malanciault)