@@ -1,106 +1,70 @@
 <?php
-// $Id: main.php 2 2005-11-02 18:23:29Z skalpa $
-//  ------------------------------------------------------------------------ //
-//                XOOPS - PHP Content Management System                      //
-//                    Copyright (c) 2000 XOOPS.org                           //
-//                       <http://www.xoops.org/>                             //
-//  ------------------------------------------------------------------------ //
-//  This program is free software; you can redistribute it and/or modify     //
-//  it under the terms of the GNU General Public License as published by     //
-//  the Free Software Foundation; either version 2 of the License, or        //
-//  (at your option) any later version.                                      //
-//                                                                           //
-//  You may not change or alter any portion of this comment or credits       //
-//  of supporting developers from this source code or any supporting         //
-//  source code which is considered copyrighted (c) material of the          //
-//  original comment or credit authors.                                      //
-//                                                                           //
-//  This program is distributed in the hope that it will be useful,          //
-//  but WITHOUT ANY WARRANTY; without even the implied warranty of           //
-//  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            //
-//  GNU General Public License for more details.                             //
-//                                                                           //
-//  You should have received a copy of the GNU General Public License        //
-//  along with this program; if not, write to the Free Software              //
-//  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA //
-//  ------------------------------------------------------------------------ //
-// Author: Kazumi Ono (AKA onokazu)                                          //
-// URL: http://www.myweb.ne.jp/, http://www.xoops.org/, http://jp.xoops.org/ //
-// Project: The XOOPS Project                                                //
-// ------------------------------------------------------------------------- //
+/**
+* ImpressCMS Version Checker
+*
+* This page checks if the ImpressCMS install runs the latest released version
+*
+* @copyright	The ImpressCMS Project http://www.impresscms.org/
+* @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+* @package		core
+* @since		1.0
+* @author		malanciault <marcan@impresscms.org)
+* @version		$Id: error.php 429 2008-01-02 22:21:41Z malanciault $
+*/
 
-if ( !is_object($xoopsUser) || !is_object($xoopsModule) || !$xoopsUser->isAdmin($xoopsModule->getVar('mid')) || !isset($_GET['mid'])) {
+if ( !is_object($xoopsUser) || !is_object($xoopsModule) || !$xoopsUser->isAdmin() ) {
+icms_debug($_GET['mid']);
     exit("Access Denied");
 }
 
-if (intval($_GET['mid'])) {
-    $module_handler =& xoops_gethandler('module');
-    $versioninfo =& $module_handler->get(intval($_GET['mid']));
+
+$rssurl= "http://www.impresscms.org/impresscms_version.xml";
+$rssfile = XOOPS_CACHE_PATH.'/impresscms_version.xml';
+$rssdata = '';
+
+//$time_before_cache_again = 86400;
+$time_before_cache_again = 1;
+
+if (!file_exists($rssfile) || filemtime($rssfile) < time() - $time_before_cache_again) {
+	require_once XOOPS_ROOT_PATH.'/class/snoopy.php';
+        $snoopy = new Snoopy;
+        if ($snoopy->fetch($rssurl)) {
+            $rssdata = $snoopy->results;
+            if (false !== $fp = fopen($rssfile, 'w')) {
+                fwrite($fp, $rssdata);
+            }
+        }
 } else {
-    $mid = str_replace('..', '', trim($_GET['mid']));
-    if (file_exists(XOOPS_ROOT_PATH.'/modules/'.$mid.'/xoops_version.php')) {
-        $module_handler =& xoops_gethandler('module');
-        $versioninfo =& $module_handler->create();
-        $versioninfo->loadInfo($mid);
-    }
-}
-if (!isset($versioninfo) || !is_object($versioninfo)) {
-    exit();
+	if (false !== $fp = fopen($rssfile, 'r')) {
+		while (!feof ($fp)) {
+			$rssdata .= fgets($fp, 4096);
+		}
+		fclose($fp);
+	}
+}     
+
+if ($rssdata != '') {
+	include_once XOOPS_ROOT_PATH.'/class/xml/rss/xmlrss2parser.php';
+	$rss2parser = new XoopsXmlRss2Parser($rssdata);
+	if (false != $rss2parser->parse()) {
+		// get the only item on that xml
+		$items =& $rss2parser->getItems();
+
+		$latest_item = $items[0];
+		$latest_build = $latest_item['guid'];
+		$icmsAdminTpl->assign('latest_version', $latest_item['title']);
+		$icmsAdminTpl->assign('your_version', XOOPS_VERSION);
+		if ($latest_build > ICMS_BUILD) {
+			$icmsAdminTpl->assign('update_available', true);	
+			$icmsAdminTpl->assign('latest_url', $latest_item['link']);			
+		}
+		
+	} else {
+		echo $rss2parser->getErrors();
+	}
 }
 
-//$css = getCss($theme);
-echo "<html>\n<head>\n";
-echo "<meta http-equiv=\"Content-Type\" content=\"text/html; charset="._CHARSET."\"></meta>\n";
-echo "<title>".htmlspecialchars($xoopsConfig['sitename'])."</title>\n";
-
-?>
-<script type="text/javascript">
-<!--//
-scrollID=0;
-vPos=0;
-
-function onWard() {
-   vPos+=2;
-   window.scroll(0,vPos);
-   vPos%=1000;
-   scrollID=setTimeout("onWard()",30);
-   }
-function stop(){
-   clearTimeout(scrollID);
-}
-//-->
-</script>
-<?php
-/*
-if($css){
-    echo "<link rel=\"stylesheet\" href=\"".$css."\" type=\"text/css\">\n\n";
-}
-*/
-echo "</head>\n";
-echo "<body onLoad=\"if(window.scroll)onWard()\" onmouseover=\"stop()\" onmouseout=\"if(window.scroll)onWard()\">\n";
-echo "<div><table width=\"100%\"><tr><td align=\"center\"><br /><br /><br /><br /><br />";
-if ($modimage = $versioninfo->getInfo('image')) {
-    $modimage_path = '/modules/'.$versioninfo->getInfo('dirname').'/'.$modimage;
-    $modimage_realpath = str_replace("\\", "/", realpath(XOOPS_ROOT_PATH.$modimage_path));
-    if (0 === strpos($modimage_realpath, XOOPS_ROOT_PATH) && is_file($modimage_realpath)) {
-        echo "<img src='".XOOPS_URL.$modimage_path."' border='0' /><br />";
-    }
-}
-if ($modname = $versioninfo->getInfo('name')) {
-    echo "<big><b>".htmlspecialchars($modname)."</b></big>";
-}
-
-$modinfo = array('Version', 'Description', 'Author', 'Credits', 'License');
-foreach ($modinfo as $info) {
-    if ($info_output = $versioninfo->getInfo(strtolower($info))) {
-        echo "<br /><br /><u>$info</u><br />";
-        echo htmlspecialchars($info_output);
-    }
-}
-echo "<br /><br /><br /><br /><br />";
-echo "<br /><br /><br /><br /><br />";
-echo "<a href=\"javascript:window.close();\">Close</a>";
-echo "<br /><br /><br /><br /><br /><br />";
-echo "</td></tr></table></div>";
-echo "</body></html>";
+xoops_cp_header();
+$icmsAdminTpl->display(XOOPS_ROOT_PATH.'/modules/system/templates/admin/system_adm_version.html');
+xoops_cp_footer();
 ?>
