@@ -2,6 +2,10 @@
 // $Id: version.php 2 2005-11-02 18:23:29Z skalpa $
 //%%%%%%	Admin Module Name  Version 	%%%%%
 define("_AM_DBUPDATED",_MD_AM_DBUPDATED);
+define("_AM_VERSION_TITLE", 'ImpressCMS Version Checker');
+define("_AM_VERSION_NO_UPDATE", 'You are running the latest version of ImpressCMS !');
+define("_AM_VERSION_UPDATE_NEEDED", 'There is a new version of ImpressCMS ! The ImpressCMS Project strongly recommends always using the latest release.');
+define("_AM_VERSION_MOREINFO", 'Click on the following link to get more information on the latest release: ');
 
 
 ?>
