@@ -11,6 +11,7 @@ ImpressCMS ChangeLog
 - Added : Addition of the danish flag (anderssk)
 - Added : Addition of the persian flag (malanciault)
 - Added : definitions for ul and li in impresstheme (McDonald/snow/malanciault)
+- Added : New module added in admin: ImpressCMS Version Checker (malanciault/nekro)
 
 =========================================
 2008-02-24 : ImpressCMS 1.0 "Janus" RC 2
